--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "drome-compare",
   "version": "0.0.1",
   "description": "Check backup completeness of Spotify playlists",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
