--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Minz💕",
   "license": "MIT",
   "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.1.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "formidable": "^3.5.1"
