--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fast-xml-parser": "^4.3.2",
     "formidable": "^3.5.1"
   }
 }
