--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.3.2",
-    "formidable": "^3.5.1"
+    "formidable": "^3.5.1",
+    "sqlite3": "^5.1.7"
   }
 }
